--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.containerSize {
+    width: 500px;
+    height: 500px;
+    border: 3px solid #73AD21;
+}
